environments/prod/go-http-server/patches/resource-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-http-server
spec:
  template:
    spec:
      containers:
      - name: go-http-server
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "1000m"
            memory: "1Gi"
